--- a/leap.html
+++ b/leap.html
@@ -1,61 +1,144 @@
-<html >
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>Leap Year Checker</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f5f5f5;
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(135deg, #74ebd5, #9face6);
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       height: 100vh;
+      margin: 0;
+      animation: bgMove 10s infinite alternate ease-in-out;
     }
+
+    @keyframes bgMove {
+      0% { background-position: left; }
+      100% { background-position: right; }
+    }
+
     h1 {
-      color: #333;
+      color: #fff;
+      font-size: 36px;
+      margin-bottom: 25px;
+      animation: fadeIn 1s ease-in-out;
     }
+
+    .card {
+      background: rgba(255, 255, 255, 0.95);
+      padding: 30px;
+      border-radius: 20px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+      text-align: center;
+      animation: slideUp 0.8s ease;
+    }
+
     input {
-      padding: 8px;
+      padding: 10px;
       font-size: 16px;
+      border: 2px solid #2980b9;
+      border-radius: 10px;
       margin-right: 10px;
+      outline: none;
+      width: 150px;
+      transition: 0.3s;
     }
+
+    input:focus {
+      border-color: #6c5ce7;
+      box-shadow: 0 0 8px #6c5ce7;
+    }
+
     button {
-      padding: 8px 16px;
+      padding: 10px 20px;
       font-size: 16px;
       cursor: pointer;
+      border: none;
+      border-radius: 10px;
+      background: #2980b9;
+      color: white;
+      transition: 0.3s;
     }
+
+    button:hover {
+      background: #1f6391;
+      transform: scale(1.05);
+    }
+
     #result {
       margin-top: 22px;
-      font-size: 20px;
+      font-size: 22px;
       font-weight: bold;
+      animation: fadeIn 0.8s ease;
+    }
+
+    .yes {
+      color: green;
+      animation: bounce 0.6s ease;
+    }
+
+    .no {
+      color: red;
+      animation: shake 0.6s ease;
+    }
+
+    /* Animations */
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
+    @keyframes slideUp {
+      from { transform: translateY(20px); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
+    }
+
+    @keyframes bounce {
+      0% { transform: scale(0.8); }
+      50% { transform: scale(1.1); }
+      100% { transform: scale(1); }
+    }
+
+    @keyframes shake {
+      0% { transform: translateX(0); }
+      25% { transform: translateX(-5px); }
+      50% { transform: translateX(5px); }
+      75% { transform: translateX(-5px); }
+      100% { transform: translateX(0); }
     }
   </style>
 </head>
 <body>
-  <h1>Leap Year Checker</h1>
-  <div>
+  <h1>✨ Leap Year Checker ✨</h1>
+  <div class="card">
     <input type="number" id="yearInput" placeholder="Enter a year" />
     <button onclick="checkLeapYear()">Check</button>
+    <div id="result"></div>
   </div>
-  <div id="result"></div>
 
   <script>
     function checkLeapYear() {
-      const year = document.getElementById('yearInput').value;
-      let result = '';
+      const year = document.getElementById('yearInput').value.trim();
+      const resultDiv = document.getElementById('result');
+      resultDiv.innerHTML = '';
+
       if (year === '') {
-        result = 'Please enter a year.';
-      } else {
-        const y = parseInt(year);
-        if ((y % 4 === 0 && y % 100 !== 0) || (y % 400 === 0)) {
-          result = `${y} is a leap year.`;
-        } else {
-          result = `${y} is not a leap year.`;
-        }
+        resultDiv.innerHTML = '<span class="no">⚠️ Please enter a year.</span>';
+        return;
       }
-      document.getElementById('result').innerText = result;
+
+      const y = parseInt(year);
+      if ((y % 4 === 0 && y % 100 !== 0) || (y % 400 === 0)) {
+        resultDiv.innerHTML = `<span class="yes">${y} ✅ is a Leap Year!</span>`;
+      } else {
+        resultDiv.innerHTML = `<span class="no">${y} ❌ is NOT a Leap Year!</span>`;
+      }
     }
   </script>
 </body>
 </html>
+
